fix: body's overflow and text-area resize property

--- a/random_choice_picker/style.css
+++ b/random_choice_picker/style.css
@@ -12,7 +12,6 @@ body{
   justify-content: center;
   align-items: center;
   height: 100vh;
-  overflow: hidden;
   margin: 0;
 }
 
@@ -35,6 +34,7 @@ h3{
   padding: 10px;
   margin: 0 0 20px;
   font-size: 16px;
+  resize: vertical;
 }
 
 .tag{
